my awesome exam2 final commit

--- a/app/views/todos/index.html.erb
+++ b/app/views/todos/index.html.erb
@@ -2,28 +2,32 @@
 
 <%= render 'form' %>
 
-<table>
+<table id="todos">
   <thead>
     <tr>
+      <th colspan="1"></th>
       <th>Title</th>
-      <th>Completed</th>
-      <th colspan="3"></th>
+      <th colspan="2"></th>
     </tr>
   </thead>
 
   <tbody>
     <% @todos.each do |todo| %>
-      <tr>
-        <td><%= todo.title %></td>
-        <td><%= todo.completed %></td>
-        <td><%= link_to 'Show', todo %></td>
+    <tr class='<%='completed' if todo.completed? %>' >
+        <td><%= form_for(todo) do |f| %>
+          <% if todo.completed then compl = 'active' else compl = 'completed' end %>
+            <%= f.hidden_field :completed, value: !todo.completed?  %>
+            <%= f.submit 'mark as ' + compl %>
+            <% end %>
+        </td>
+        <td><span><%= todo.title %></span></td>
         <td><%= link_to 'Edit', edit_todo_path(todo) %></td>
         <td><%= link_to 'Destroy', todo, method: :delete, data: { confirm: 'Are you sure?' } %></td>
       </tr>
     <% end %>
   </tbody>
 </table>
-
+<p><%= "#{@todos.active.count} item(s) left"%></p>
 <br>
 
 <%= link_to 'All', root_path %>
